Fix jumping of bar on reload.

--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -50,6 +50,8 @@ $base-line-height: 19px;
 
 $audiovideolevel: #9dd53a;
 
+//main navigation bar
+$minbarheight: 44px;
 
 // ** Fontawsome changed variables **
 // original at libs/fontawesome/_variables.scss
